# Agentnet

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  railway.toml  render.yaml
.do/: app.yaml
app/: config.py  database.py  main.py  mcp.py  seed.py
app/api/: admin.py  auth.py  campaigns.py  deps.py  email_intel.py  execute.py  history.py  jobs.py  live.py  meeting_intel.py  memories.py  oauth.py  routes.py  routines.py  session_utils.py  settings.py  skills.py  stt.py  whatsapp.py  workflows.py
app/crawlers/: apify.py  chatgpt_connectors.py  claude_connectors.py  mcpmarket.py  site.py  smithery.py  smithery_preview.py  webmcp.py
app/migrations/: add_auth.py  add_campaigns.py  add_email_intel.py  add_job_agent.py  add_meeting_intel.py  add_memories.py  add_routines.py  add_settings.py  add_skills.py  add_workflows.py
app/models/: __init__.py  campaign.py  capability.py  domain.py  email_intel.py  followup.py  job_profile.py  meeting_intel.py  memory.py  preference.py  registered_site.py  routine.py  skill.py  tool.py  training.py  user.py  workflow.py
app/schemas/: capability.py  search.py  tool.py
app/services/: apple.py  browser.py  calendar.py  contacts.py  copywriter.py  crawl_worker.py  discovery.py  documents.py  drive.py  email_intel.py  embeddings.py  enrichment.py  gmail.py  job_agent.py  job_vision.py  llm.py  mcp_probe.py  meeting_intel.py  memory.py  oauth.py  person_intel.py  (+6 more)
frontend/: next.config.ts  package-lock.json  package.json
mcp/: server.py
openai-app/: README.md  package.json  server.js
(+39 files in other folders)
